# risp

./: .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: rust-clippy.yml  rust.yml
.zed/: debug.json  tasks.json
examples/: gcd.risp
src/: codegen.rs  compiler.rs  evaluator.rs  ir.rs  main.rs  parser.rs  stack_frame.rs  tests.rs  value.rs
src/codegen/: x86_64.rs
src/codegen/x86_64/: abi.rs  codegen_state.rs  error.rs  function.rs  instruction.rs  register_allocation.rs  slot.rs
src/compiler/: error.rs  function.rs  stack_frame.rs
src/evaluator/: error.rs
src/ir/: block.rs  instruction.rs  jump_condition.rs  label.rs  opcode.rs  slot.rs
src/parser/: block.rs  expression.rs  identifier.rs  literal.rs  statement.rs  tokens.rs  util.rs
src/parser/expression/: binary_operator.rs  function_call.rs  identifier.rs  literal.rs
src/parser/statement/: assignment.rs  condition.rs  expression.rs  function_definition.rs  loop_statement.rs  return_statement.rs  variable_declaration.rs
