[package]
name = "risp"
version = "0.1.0"
authors = ["Michael Melanson <michael@michaelmelanson.net>"]
edition = "2018"

[dependencies]
"nom" = "7.1.1"
"rustyline" = { version = "9.1.2", default-features = false }
"assembler" = { git = "https://github.com/michaelmelanson/assembler.git", branch="remove-unlikely" }
