[package]
name = "risp"
version = "0.1.0"
authors = ["Michael Melanson <michael@michaelmelanson.net>"]
edition = "2021"

[dependencies]
"nom" = "7.1.1"
"rustyline" = { version = "9.1.2", default-features = false }
memmap2 = "0.5.8"

[dependencies.iced-x86]
version = "1.18.0"
default-features = false
features = ["std", "encoder", "decoder", "masm", "code_asm"]
