[package]
name = "risp"
version = "0.1.0"
authors = ["Michael Melanson <michael@michaelmelanson.net>"]
edition = "2021"

[dependencies]
"nom" = "7"
"nom_locate" = "4"
"rustyline" = { version = "10", default-features = false }
memmap2 = "0.7"

[dependencies.iced-x86]
version = "1.20"
default-features = false
features = ["std", "encoder", "decoder", "masm", "code_asm"]
